--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,21 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 100px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
